# cppbackend

./: prepare_test.sh
.github/workflows/: main.yml
sprint1/: README.md
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  gascooker.h  hotdog.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/: CMakeLists.txt
sprint1/problems/final_task/solution/src/: http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.h  request_handler.cpp  request_handler.h
sprint1/problems/map_json/solution/src/: http_server.h  json_loader.cpp  model.cpp  request_handler.cpp  (+1 more)
sprint1/problems/radio/solution/: CMakeLists.txt  CMakeLists.txt.save  main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  conanfile.txt
sprint2/problems/logger/solution/: main.cpp  my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/ammo/solution/: ammo.txt
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/instrumentation/solution/: report
sprint3/problems/load/solution/: load.yaml
sprint3/problems/scores/solution/: donotreadme.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/stress/solution/: load.yaml
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/src/: main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  README.md  conanfile.txt
sprint4/problems/leave_game/solution/src/: DB_manager.h  collision_detector.cpp  extra_data.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  model_core.cpp  model_core.h  model_serialization.h  request_handler.h  save_manager.h  tagged.h  tagged_uuid.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
(+114 files in other folders)
